--- a/Project.toml
+++ b/Project.toml
@@ -8,4 +8,6 @@ DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Gloria = "5b2e8964-9f3b-11e8-3f79-610468876dfe"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MultiScaleArrays = "f9640e96-87f6-5992-9c3b-0743c6a49ffa"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+TickTock = "9ff05d80-102d-5586-aa04-3a8bd1a90d20"
